@@ -1,0 +1,39 @@
+incident_external_imperial_union = {
+	event = incident_external_imperial_union.2
+	default_option = 0
+	
+	can_stop = {
+		OR = {
+			NOT = {
+				any_country = {
+					has_country_flag = current_pu_incident_target_flag
+				}
+			}
+			any_country = {
+				has_country_flag = current_pu_incident_target_flag
+				OR = {
+					is_subject = no
+					overlord = {
+						is_part_of_hre = yes
+					}
+				}
+			}
+		}
+	}
+	
+	0 = { # war
+		factor = 1
+		modifier = {
+			factor = 1000
+			
+		}
+	}
+	
+	1 = { # do nothing
+		factor = 1
+	}
+
+	2 = { # kick them out
+		factor = 1
+	}
+}
