@@ -963,6 +963,22 @@ spriteTypes = {
         loadType = "INGAME"
     }
 
+	spriteType = {
+        name = "GFX_incident_external_imperial_union.2.a"
+        texturefile = "gfx/interface/imperial_incident_legitimacy.dds"
+        loadType = "INGAME"
+    }
+	spriteType = {
+        name = "GFX_incident_external_imperial_union.2.b"
+        texturefile = "gfx/interface/imperial_incident_shield.dds"
+        loadType = "INGAME"
+    }
+	spriteType = {
+        name = "GFX_incident_external_imperial_union.2.c"
+        texturefile = "gfx/interface/imperial_incident_denial_of_request.dds"
+        loadType = "INGAME"
+    }
+
     #Estate Privileges
     spriteType = {
 		name = "privilege_monopoly_of_goods_beer"
