@@ -297,3 +297,18 @@
  boh_raised_to_kingdom_a_tt: "Der Regierungsrang von §Y[BOH.GetName]§! wechselt zu §YKönigreich§!. Der am wenigsten qualifizierte Kurfürst wird ersetzt."
  boh_raised_to_kingdom_b_tt: "Der Regierungsrang von §Y[BOH.GetName]§! wechselt zu §YKönigreich§!."
  boh_raised_to_electorate_a_tt: "Der am wenigsten qualifizierte Kurfürst wird ersetzt."
+#External Imperial Union
+ incident_external_imperial_union: "External Imperial Union"
+ incident_external_imperial_union_member_alert: "An important member of the Empire has fallen under a Personal Union with a foreign nation. The Emperor must show strength to preserve the integrity of the Empire from rapacious monarchs."
+ incident_external_imperial_union_emperor_alert: "An important member of the Empire has fallen under a Personal Union with a foreign nation. The Emperor must show strength to preserve the integrity of the Empire from rapacious monarchs."
+ incident_external_imperial_union.1.t: "The [Root.GetAdjective] Rule over [pu_hre_country.GetName]"
+ incident_external_imperial_union.1.d: "The absence of a heir in [pu_hre_country.GetName] a couple of years ago, has turned our [Root.Monarch.GetTitle] into the fortunate heir of the [pu_hre_country.GovernmentName]. However, many Princes of the Holy Roman Empire have expressed their displeasure at this succession, as [pu_hre_country.GetName] is still formally part of the Empire, while we are not. The Emperor has now arranged for an Imperial Diet to decide whether [pu_hre_country.GetName] should be brought back into the Empire, or whether the Imperial claim to the region should be dropped altogether.\nWe must prepare for a military conflict if we wish to maintain our own claim."
+ incident_external_imperial_union.1.a: "We will not simply let them take what belongs to us."
+ incident_external_imperial_union.1.a.tt: "§RThis may lead to a War with [Emperor.GetName]!§!"
+ incident_external_imperial_union.1.b: "It's not worth the hassle."
+ incident_external_imperial_union.2.t: "External Imperial Union"
+ incident_external_imperial_union.2.d: "The [pu_hre_country.GetAdjective] Crown is currently in the hands of the [external_imperial_union_senior_partner.GetAdjective] [external_imperial_union_senior_partner.GovernmentName]. This is an unacceptable situation for many Princes of the Holy Roman Empire, as they consider the claim of the [external_imperial_union_senior_partner.GetAdjective] [external_imperial_union_senior_partner.Monarch.GetTitle] to be illegitimate.\nIt is now up to the Emperor to dissolve the Personal Union between the two states militarily or to redraw the borders of the Empire, if he deems it necessary."
+ incident_external_imperial_union.2.a: "[external_imperial_union_senior_partner.GetName] must be forced to surrender the [pu_hre_country.GetAdjective] Crown."
+ incident_external_imperial_union.2.a.tt: "§RThis may lead to a War with [external_imperial_union_senior_partner.GetName]!§!"
+ incident_external_imperial_union.2.b: "Keep the Status Quo."
+ incident_external_imperial_union.2.c: "[pu_hre_country.GetName] will no longer be an Imperial Prince."
