@@ -8,6 +8,7 @@
 -Added new mission tree for Pfullendorf with 12 missions (contribution by Leonhard von Keutschach)
 -Added new mission tree for Alsace with with 15 missions (contribution by FrenchKnight)
 -Added Russian Factionalism disaster for Kiev with 11 associated events
+-Added an imperial incident that allows the Emperor to break personal unions when the senior partner is not a member of the HRE
 -Added an event chain for the Emperor to call a Diet with the Thuringian and Saxon Princes
 -Added 1 new estate privilege for the Mamluks
 -Added the following alternative country names: Northumbria (Northumberland)
@@ -40,7 +41,7 @@
 -Nerfed unrest modifiers given from several missions
 
 #Fixes
--Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily, Lorraine, Aragon, Altsachsen, Denmark, Outremer, Worms, Poland
+-Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily, Lorraine, Aragon, Altsachsen, Denmark, Outremer, Worms, Poland, Tuscany
 -The Baltic Orders should finally, and I mean finally, spawn with proper techs
 -Fixed major bug preventing Industrialism from spawning for Rule Britannia owners
 -Forming the following nations now properly gives you their missions: Russia (by reforms), Great Britain (diplomatically), Lotharingia (as any tag other than Lorraine), Spain, Aquitaine, Tunis
